--- a/index.html
+++ b/index.html
@@ -1,90 +1,12 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>CH-ALLOSH SUPREME V16 👑</title>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700;900&display=swap');
-        :root { --main: #ff6a00; --bot: #00d4ff; --bg: #0b0f15; }
-        * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; }
-        body { background: #000; color: white; overflow: hidden; position: fixed; width: 100%; height: 100%; }
-        
-        /* خلفية النجوم المتحركة */
-        .stars { position: fixed; inset: 0; background: url('https://www.transparenttextures.com/patterns/stardust.png'); z-index: -1; animation: moveStars 60s linear infinite; }
-        @keyframes moveStars { from { background-position: 0 0; } to { background-position: 1000px 1000px; } }
-
-        /* الهيدر العلوي */
-        .header { height: 60px; background: rgba(15,15,15,0.95); display: flex; align-items: center; justify-content: space-around; border-bottom: 2px solid var(--main); z-index: 1000; }
-        .h-icon { width: 30px; height: 30px; cursor: pointer; }
-
-        /* القوائم الجانبية (يمين ويسار) */
-        .side { position: fixed; top: 60px; bottom: 85px; width: 280px; background: rgba(10,10,10,0.98); transition: 0.3s; z-index: 1500; border: 1px solid #333; overflow-y: auto; }
-        #side-r { right: -280px; border-left: 2px solid var(--main); }
-        #side-l { left: -280px; border-right: 2px solid var(--main); }
-        .side.open { right: 0 !important; left: 0 !important; }
-
-        /* التاج والملك علوش */
-        .king-zone { text-align: center; padding: 20px; }
-        .big-crown { font-size: 55px; display: block; animation: pulse 1.5s infinite; filter: drop-shadow(0 0 10px gold); }
-        .king-name { font-size: 26px; font-weight: 900; background: linear-gradient(to right, #fff, gold, #ff6a00); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
-        @keyframes pulse { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.1); } }
-
-        /* الشات */
-        .chat-view { position: absolute; top: 60px; bottom: 85px; width: 100%; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 12px; }
-        .msg-wrap { display: flex; gap: 10px; align-items: flex-start; }
-        .u-img { width: 45px; height: 45px; border-radius: 50%; border: 2px solid var(--main); object-fit: cover; }
-        .msg-body { background: rgba(30,30,30,0.8); padding: 10px; border-radius: 15px; border-right: 4px solid var(--main); max-width: 75%; position: relative; }
-        .bot-style { border-right: 4px solid var(--bot) !important; background: rgba(0,212,255,0.1) !important; }
-
-        /* الإيموجيات المتحركة GIF */
-        #emoji-panel { position: absolute; bottom: 85px; width: 100%; height: 250px; background: #111; border-top: 2px solid var(--main); display: none; grid-template-columns: repeat(5, 1fr); gap: 10px; padding: 15px; overflow-y: auto; z-index: 2000; }
-        .gif-item { width: 100%; cursor: pointer; transition: 0.2s; }
-
-        /* البار السفلي */
-        .footer { position: fixed; bottom: 0; width: 100%; height: 85px; background: #000; border-top: 1px solid #222; display: flex; align-items: center; padding: 0 10px; gap: 10px; z-index: 2000; }
-        #msg-in { flex: 1; height: 45px; background: #1a1a1a; border: 1px solid #333; border-radius: 25px; color: white; padding: 0 15px; outline: none; }
-        .btn-act { background: none; border: none; font-size: 28px; cursor: pointer; color: white; }
-    </style>
-</head>
-<body>
-
-<div class="stars"></div>
-
-<div class="header">
-    <img src="https://cdn-icons-png.flaticon.com/512/3580/3580229.png" class="h-icon" onclick="location.reload()">
-    <div style="color:var(--main); font-weight:900; font-size:18px;">ALLOSH SUPREME</div>
-    <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" class="h-icon" onclick="toggleSide('side-l')">
-    <img src="https://cdn-icons-png.flaticon.com/512/880/880594.png" class="h-icon" onclick="toggleSide('side-r')">
-</div>
-
-<div id="side-r" class="side">
-    <div id="u-list"></div>
-    <div style="padding:15px; text-align:center; color:var(--bot); border-top:1px solid #333;">
-        <b>🤖 علوش بوت</b><br><small>نظام الحماية والترحيب جاهز</small>
-    </div>
-</div>
-
-<div id="side-l" class="side">
-    <div style="height:120px; background:linear-gradient(to bottom, var(--main), #000);"></div>
-    <div style="text-align:center; margin-top:-45px; padding:15px;">
-        <img id="my-avatar" src="" style="width:90px; height:90px; border-radius:50%; border:4px solid #111;">
-        <h2 id="my-name">...</h2>
-        <p style="color:gold;">صاحب الشات 👑</p>
-        <hr style="margin:20px 0; opacity:0.1;">
-        <button onclick="clearChat()" style="width:100%; padding:12px; background:red; color:white; border:none; border-radius:10px; margin-bottom:10px;">مسح الشات 🧹</button>
-        <button onclick="lockChat()" style="width:100%; padding:12px; background:orange; color:white; border:none; border-radius:10px;">قفل الشات 🔒</button>
-    </div>
-</div>
-
-<div id="emoji-panel">
-    <img class="gif-item" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNnZ4Z2R0NXJscHB4Y25xZ3R5ZnN3bTZqZzR4ZzR4ZzR4ZzR4ZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/v6aOebdclIYBkPjn9D/giphy.gif" onclick="sendGif(this.src)">
-    <img class="gif-item" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExOHp4Z2R0NXJscHB4Y25xZ3R5ZnN3bTZqZzR4ZzR4ZzR4ZzR4ZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/L2S1Y7Z9Xf3mD5uB5y/giphy.gif" onclick="sendGif(this.src)">
-    <img class="gif-item" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExOHp4Z2R0NXJscHB4Y25xZ3R5ZnN3bTZqZzR4ZzR4ZzR4ZzR4ZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/8vIFoK3N6R4FwK2vC7/giphy.gif" onclick="sendGif(this.src)">
-</div>
-
-<div class="chat-view" id="chat-box"></div>
-
-<div class="footer">
+<style>
+    .rank-owner { color: #ff0000; text-shadow: 0 0 5px red; font-weight: 900; }
+    .rank-admin { color: #00ff00; font-weight: bold; }
+    .verify-badge { width: 15px; margin-right: 5px; }
+    .msg-owner { background: rgba(255, 0, 0, 0.1) !important; border: 1px solid red !important; }
+</style>
+<script>
+    function checkRank(user) {
+        if(user.name === "علوش") return '<span class="rank-owner">المالك 👑</span> <img src="https://cdn-icons-png.flaticon.com/512/7641/7641727.png" class="verify-badge">';
+        return '<span class="rank-admin">عضو مميز</span>';
+    }
+</script>
