--- a/index.html
+++ b/index.html
@@ -3,86 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>GALAXY CHAT V19 🌌</title>
+    <title>DRAGON CHAT V20 🔥</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700;900&display=swap');
-        :root { --neon: #00f2ff; --purple: #7000ff; --pink: #ff007f; }
+        @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@800;900&display=swap');
+        :root { --fire: linear-gradient(90deg, #ff4b2b, #ff416c); --gold: #ffcc00; }
         * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; }
         
-        /* خلفية فضاء متحركة */
-        body { 
-            background: #020205; color: white; overflow: hidden; height: 100vh;
-            background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
+        body { background: #0a0000; color: #fff; overflow: hidden; height: 100vh; }
+        .fire-bg { position: fixed; inset: 0; background: radial-gradient(circle at top, #330000 0%, #000 100%); z-index: -1; }
+
+        /* الهيدر الناري */
+        .header {
+            height: 65px; background: rgba(20,0,0,0.9);
+            display: flex; align-items: center; justify-content: space-between;
+            padding: 0 15px; border-bottom: 3px solid #ff4b2b;
+            box-shadow: 0 0 20px rgba(255, 75, 43, 0.4);
         }
 
-        /* تأثير التوهج للواجهة */
-        .glass-header {
-            height: 65px; background: rgba(255,255,255,0.03);
-            backdrop-filter: blur(15px); border-bottom: 1px solid rgba(0,242,255,0.2);
-            display: flex; align-items: center; justify-content: space-around;
+        /* نظام التنبيه العلوي */
+        #top-alert {
+            position: fixed; top: 70px; width: 90%; left: 5%;
+            background: var(--fire); color: white; padding: 8px;
+            border-radius: 10px; text-align: center; font-size: 12px;
+            display: none; z-index: 5000; animation: fadeInDown 0.5s;
         }
 
-        /* نظام الرتب المضيئة */
-        .badge-owner {
-            background: linear-gradient(90deg, var(--neon), var(--purple));
-            padding: 2px 10px; border-radius: 20px; font-size: 11px;
-            box-shadow: 0 0 10px var(--neon);
+        /* حاوية الشات */
+        #fire-chat {
+            height: calc(100vh - 150px); overflow-y: auto; padding: 15px;
+            display: flex; flex-direction: column; gap: 12px;
         }
 
-        /* رسائل الفقاعات الزجاجية */
-        #chat-flow {
-            height: calc(100vh - 150px); overflow-y: auto; padding: 20px;
-            display: flex; flex-direction: column; gap: 15px;
+        .dragon-msg {
+            background: rgba(40,0,0,0.6); border: 1px solid #440000;
+            padding: 12px; border-radius: 20px 20px 0 20px;
+            max-width: 80%; align-self: flex-start;
+            position: relative; animation: slideIn 0.3s forwards;
         }
 
-        .bubble {
-            max-width: 80%; padding: 12px; border-radius: 20px;
-            background: rgba(255,255,255,0.05);
-            border: 1px solid rgba(255,255,255,0.1);
-            position: relative; animation: popUp 0.3s ease;
+        .owner-border { border: 2px solid; border-image: linear-gradient(45deg, gold, red) 1; animation: glow 1s infinite alternate; }
+
+        /* شريط الكتابة */
+        .footer {
+            height: 85px; background: #111; display: flex; align-items: center;
+            padding: 10px; gap: 10px; border-top: 2px solid #ff4b2b;
         }
 
-        .my-msg { border-right: 3px solid var(--neon); align-self: flex-start; }
-        
-        /* شريط الكتابة النيون */
-        .input-zone {
-            position: fixed; bottom: 0; width: 100%; height: 85px;
-            background: rgba(0,0,0,0.8); display: flex; align-items: center;
-            padding: 0 15px; gap: 12px; border-top: 1px solid rgba(112,0,255,0.3);
-        }
+        #in { flex: 1; height: 45px; background: #222; border: 1px solid #444; border-radius: 10px; color: #fff; padding: 0 15px; outline: none; }
+        .btn-fire { background: var(--fire); border: none; width: 50px; height: 45px; border-radius: 10px; cursor: pointer; color: white; font-weight: 900; }
 
-        #msg-input {
-            flex: 1; height: 45px; background: rgba(255,255,255,0.07);
-            border: 1px solid var(--purple); border-radius: 12px;
-            color: white; padding: 0 15px; outline: none;
-            box-shadow: inset 0 0 5px var(--purple);
-        }
-
-        .send-btn {
-            width: 45px; height: 45px; border-radius: 12px;
-            background: var(--purple); border: none; color: white;
-            box-shadow: 0 0 15px var(--purple); cursor: pointer;
-        }
-
-        @keyframes popUp { from { transform: scale(0.8); opacity: 0; } to { transform: scale(1); opacity: 1; } }
+        @keyframes glow { from { box-shadow: 0 0 5px gold; } to { box-shadow: 0 0 15px red; } }
+        @keyframes slideIn { from { opacity: 0; transform: translateX(50px); } to { opacity: 1; transform: translateX(0); } }
+        @keyframes fadeInDown { from { opacity: 0; transform: translateY(-20px); } to { opacity: 1; transform: translateY(0); } }
     </style>
 </head>
 <body>
 
-<div class="glass-header">
-    <div style="font-size: 24px; cursor: pointer;">☄️</div>
-    <div style="font-weight: 900; letter-spacing: 2px; color: var(--neon); text-shadow: 0 0 10px var(--neon);">ALLOSH GALAXY</div>
-    <div style="font-size: 24px; cursor: pointer;" onclick="clearData()">🧹</div>
+<div class="fire-bg"></div>
+<div id="top-alert">🔥 انتبه: الإمبراطور علوش دخل إلى العرش 🔥</div>
+
+<div class="header">
+    <button onclick="clearChat()" style="background:none; border:none; color:#ff4b2b; font-size:20px;">🗑️</button>
+    <div style="font-weight: 900; font-size: 22px; color: var(--gold); text-shadow: 0 0 10px red;">DRAGON CHAT V20</div>
+    <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" style="width:40px; border-radius:50%; border:2px solid gold;">
 </div>
 
-<div id="chat-flow"></div>
+<div id="fire-chat"></div>
 
-<div class="input-zone">
-    <button style="background:none; border:none; font-size:25px;">💠</button>
-    <input type="text" id="msg-input" placeholder="أرسل رسالة إلى المجرة..." onkeypress="if(event.key==='Enter') pushMsg()">
-    <button class="send-btn" onclick="pushMsg()">🚀</button>
+<div class="footer">
+    <button style="background:none; border:none; font-size:25px;">🐲</button>
+    <input type="text" id="in" placeholder="أطلق لهبك هنا..." onkeypress="if(event.key==='Enter') send()">
+    <button class="btn-fire" onclick="send()">إرسال</button>
 </div>
 
 <script>
@@ -90,38 +83,41 @@
     firebase.initializeApp(config);
     const db = firebase.database();
 
-    const me = { name: "علوش", avatar: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png", rank: "إمبراطور" };
+    let me = { name: "علوش", rank: "إمبراطور 🔥" };
 
-    function pushMsg() {
-        let input = document.getElementById('msg-input');
-        if(!input.value) return;
-        db.ref('galaxy_msgs').push({
+    function send() {
+        let val = document.getElementById('in').value;
+        if(!val) return;
+        db.ref('dragon_msgs').push({
             user: me.name,
-            text: input.value,
-            avatar: me.avatar,
-            rank: me.rank
+            text: val,
+            rank: me.rank,
+            isOwner: true
         });
-        input.value = "";
+        document.getElementById('in').value = "";
     }
 
-    db.ref('galaxy_msgs').limitToLast(40).on('child_added', s => {
+    db.ref('dragon_msgs').limitToLast(40).on('child_added', s => {
         let d = s.val();
-        let flow = document.getElementById('chat-flow');
+        let box = document.getElementById('fire-chat');
         let div = document.createElement('div');
-        div.className = "bubble my-msg";
+        div.className = "dragon-msg " + (d.isOwner ? "owner-border" : "");
         div.innerHTML = `
-            <div style="display:flex; align-items:center; gap:8px; margin-bottom:5px;">
-                <img src="${d.avatar}" style="width:30px; border-radius:50%; border:1px solid var(--neon);">
-                <b style="color:var(--neon); font-size:13px;">${d.user}</b>
-                <span class="badge-owner">${d.rank}</span>
-            </div>
-            <div style="font-size:15px; color:#e0e0e0;">${d.text}</div>
+            <b style="color:var(--gold); font-size:12px;">${d.user} [${d.rank}]</b>
+            <div style="margin-top:5px;">${d.text}</div>
         `;
-        flow.appendChild(div);
-        flow.scrollTop = flow.scrollHeight;
+        box.appendChild(div);
+        box.scrollTop = box.scrollHeight;
     });
 
-    function clearData() { if(confirm("تصفير بيانات المجرة؟")) db.ref('galaxy_msgs').remove(); }
+    function clearChat() { if(confirm("هل تريد إخماد النيران ومسح الشات؟")) db.ref('dragon_msgs').remove(); }
+
+    // تنبيه دخول المالك
+    setTimeout(() => {
+        let alert = document.getElementById('top-alert');
+        alert.style.display = 'block';
+        setTimeout(() => alert.style.display = 'none', 4000);
+    }, 2000);
 </script>
 </body>
 </html>
