--- a/index.html
+++ b/index.html
@@ -3,41 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ALLOSH INFINITY V44 👑</title>
+    <title>ALLOSH RAIN GOLD V45 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700;900&display=swap');
-        :root { --gold: #ffd700; --bg: #000; --panel: rgba(10, 10, 15, 0.99); }
+        :root { --gold: #ffd700; --bg: #000; --card: rgba(255, 255, 255, 0.05); }
         * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; transition: 0.3s; }
         
         body { background: var(--bg); color: white; overflow: hidden; height: 100vh; position: fixed; width: 100%; }
 
-        /* نافذة اليوتيوب المربعة الصغيرة */
+        /* نافذة اليوتيوب المربعة */
         #yt-win { position: fixed; top: 75px; left: 10px; width: 170px; background: #000; border: 2px solid var(--gold); border-radius: 12px; z-index: 5000; display: none; overflow: hidden; }
         .win-bar { background: var(--gold); color: #000; padding: 4px 10px; display: flex; justify-content: space-between; font-size: 10px; font-weight: 900; }
 
         /* الهيدر */
         .header { height: 65px; background: #050505; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; z-index: 2000; }
-        .infinity-gold { color: var(--gold); font-size: 16px; font-weight: 900; text-shadow: 0 0 10px var(--gold); }
+        .infinity-gold { color: var(--gold); font-size: 14px; font-weight: 900; background: #111; padding: 5px 12px; border-radius: 20px; border: 1px solid #333; }
 
-        /* القائمة اليسرى (التحكم الملكي) */
-        .side-l { position: fixed; top: 0; bottom: 0; left: -290px; width: 280px; background: var(--panel); z-index: 4000; backdrop-filter: blur(20px); border-right: 2px solid var(--gold); overflow-y: auto; }
+        /* القائمة اليسرى */
+        .side-l { position: fixed; top: 0; bottom: 0; left: -290px; width: 280px; background: rgba(8,8,12,0.98); z-index: 4000; backdrop-filter: blur(15px); border-right: 2px solid var(--gold); overflow-y: auto; }
         .side-l.active { left: 0 !important; }
 
         /* صناديق الميزات */
-        .box { background: rgba(255,255,255,0.05); border: 1px solid #222; border-radius: 15px; margin: 15px 10px; padding: 15px; border-left: 3px solid var(--gold); }
-        .box-h { color: var(--gold); font-size: 12px; border-bottom: 1px solid #333; margin-bottom: 10px; padding-bottom: 5px; text-align: center; font-weight: 900; }
-        .btn-gold { width: 100%; padding: 10px; border-radius: 8px; border: none; background: var(--gold); color: #000; font-weight: 900; cursor: pointer; margin-top: 5px; }
+        .box { background: var(--card); border: 1px solid #222; border-radius: 15px; margin: 15px 10px; padding: 15px; border-left: 3px solid var(--gold); }
+        .box-h { color: var(--gold); font-size: 12px; border-bottom: 1px solid #333; margin-bottom: 10px; padding-bottom: 5px; text-align: center; }
+        .btn-king { width: 100%; padding: 12px; border-radius: 10px; border: none; background: linear-gradient(45deg, #ffd700, #b8860b); color: #000; font-weight: 900; cursor: pointer; font-size: 12px; }
 
         /* الشات */
-        #chat-scroller { position: absolute; top: 65px; bottom: 85px; width: 100%; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 12px; background: radial-gradient(circle, #111, #000); }
-        .msg { display: flex; gap: 10px; align-items: flex-end; animation: pop 0.3s; }
-        @keyframes pop { from { transform: scale(0.9); opacity: 0; } }
+        #chat-area { position: absolute; top: 65px; bottom: 85px; width: 100%; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 15px; }
+        .msg { display: flex; gap: 10px; align-items: flex-end; animation: slideUp 0.3s; }
+        @keyframes slideUp { from { opacity: 0; transform: translateY(10px); } }
         .pfp { width: 42px; height: 42px; border-radius: 10px; border: 2px solid var(--gold); }
-        .bubble { background: rgba(255,255,255,0.07); padding: 10px; border-radius: 15px; max-width: 80%; border: 1px solid #222; }
+        .bubble { background: rgba(255,255,255,0.06); padding: 10px; border-radius: 15px; max-width: 80%; border: 1px solid #222; }
+        .gold-tag { font-size: 8px; color: var(--gold); margin-top: 4px; display: block; opacity: 0.8; }
 
-        /* البار السفلي */
         .footer { position: fixed; bottom: 0; width: 100%; height: 85px; background: #000; border-top: 1px solid #111; display: flex; align-items: center; padding: 0 10px; gap: 8px; }
         #msg-in { flex: 1; height: 45px; background: #0d0d0d; border: 1px solid #222; border-radius: 10px; color: #fff; padding: 0 12px; }
     </style>
@@ -45,42 +45,42 @@
 <body>
 
 <div id="yt-win">
-    <div class="win-bar"><span>YOUTUBE PLAYER</span><button onclick="document.getElementById('yt-win').style.display='none'" style="border:none; background:none; font-weight:900;">X</button></div>
-    <div id="yt-area"></div>
+    <div class="win-bar"><span>YOUTUBE</span><button onclick="document.getElementById('yt-win').style.display='none'" style="border:none; background:none; font-weight:900;">X</button></div>
+    <div id="yt-player"></div>
 </div>
 
 <div class="header">
     <button onclick="document.getElementById('side-l').classList.toggle('active')" style="background:none; border:none; font-size:24px;">⚙️</button>
-    <div style="text-align:center;"><b style="color:var(--gold)">ALLOSH INFINITY</b><br><span class="infinity-gold">💰 ∞ غير محدود</span></div>
+    <div style="text-align:center"><b style="color:var(--gold)">ALLOSH RAIN V45</b><br><span class="infinity-gold">💰 ∞ غير محدود</span></div>
     <div style="width:40px;"></div>
 </div>
 
 <div id="side-l" class="side-l">
-    <div style="text-align:center; padding:25px; border-bottom:1px solid #222;">
-        <img id="me-pfp" src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" style="width:80px; border-radius:15px; border:3px solid var(--gold); cursor:pointer;" onclick="document.getElementById('f').click()">
-        <input type="file" id="f" hidden onchange="updateAvatar(this)">
-        <h3 style="margin-top:10px; color:var(--gold);">الإمبراطور علوش 👑</h3>
+    <div style="text-align:center; padding:25px;">
+        <img id="me-pfp" src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" style="width:70px; border-radius:12px; border:2px solid var(--gold); cursor:pointer;" onclick="document.getElementById('f').click()">
+        <input type="file" id="f" hidden onchange="updateP(this)">
+        <h3 style="margin-top:10px; color:var(--gold);">علوش الإمبراطور 👑</h3>
     </div>
 
     <div class="box">
-        <div class="box-h">🎰 مركز الألعاب الملكي</div>
-        <button class="btn-gold" onclick="playRPS()">لعب حجر ورقة مقص ✊</button>
-        <button class="btn-gold" onclick="alert('أنت المالك، رصيدك دائماً كامل!')" style="background:#333; color:var(--gold); margin-top:10px;">مراهنة (رصيد غير منتهي فعال)</button>
+        <div class="box-h">⛈️ توزيع مكرمة ملكية</div>
+        <button class="btn-king" onclick="rainGold()">توزيع 1000💰 على الجميع</button>
+        <p style="font-size:9px; color:#666; text-align:center; margin-top:8px;">سوف تظهر رسالة للجميع بأنك وزعت الذهب</p>
     </div>
 
     <div class="box">
-        <div class="box-h">🛒 المتجر (مجاني للملك)</div>
-        <button class="btn-gold" onclick="buy('color','#ff0000')">تفعيل اللون الأحمر 🔴</button>
-        <button class="btn-gold" onclick="buy('title','الإمبراطور الأعلى')">لقب: الإمبراطور الأعلى 🏆</button>
+        <div class="box-h">🛒 متجر الإمبراطور</div>
+        <button class="btn-king" style="background:#333; color:var(--gold);" onclick="buy('color','#00f2ff')">اسم أزرق نيون</button>
+        <button class="btn-king" style="background:#333; color:var(--gold); margin-top:5px;" onclick="buy('title','القائد الأعلى')">لقب القائد</button>
     </div>
 
-    <button onclick="document.getElementById('side-l').classList.remove('active')" style="width:90%; margin:5%; padding:10px; background:red; color:white; border:none; border-radius:10px; font-weight:900;">إغلاق التحكم</button>
+    <button onclick="document.getElementById('side-l').classList.remove('active')" style="width:90%; margin:5%; padding:10px; background:red; color:white; border:none; border-radius:10px; font-weight:900;">إغلاق</button>
 </div>
 
-<div id="chat-scroller"></div>
+<div id="chat-area"></div>
 
 <div class="footer">
-    <input type="text" id="msg-in" placeholder="أمرك مطاع يا صاحب السمو..." onkeypress="if(event.key==='Enter') push()">
+    <input type="text" id="msg-in" placeholder="أمرك مطاع..." onkeypress="if(event.key==='Enter') push()">
     <button onclick="push()" style="background:var(--gold); border:none; padding:10px 20px; border-radius:10px; font-weight:900;">إرسال</button>
 </div>
 
@@ -89,47 +89,53 @@
     firebase.initializeApp(config);
     const db = firebase.database();
 
-    // هنا تكمن القوة: الذهب تم ضبطه على قيمة خرافية
     let me = { 
         name: "علوش", avatar: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png",
-        gold: 999999999, // رصيد إمبراطوري
+        gold: 9999999, // رصيدك لا نهائي
         color: localStorage.getItem('c') || '#ffd700',
         title: localStorage.getItem('t') || 'الإمبراطور'
     };
 
+    // ميزة توزيع الذهب على الجميع
+    function rainGold() {
+        db.ref('rain_v45').push({ u: "نظام", t: "📢 الإمبراطور علوش وزع مكرمة 1000 ذهبة لكل الحاضرين! 🎉", a: "https://cdn-icons-png.flaticon.com/512/2489/2489756.png", c: "#ffd700", title: "مكرمة" });
+        // ملاحظة: في النسخ الحقيقية، يتم التحديث في حسابات المستخدمين الآخرين عبر Firebase.
+        alert("تم توزيع الذهب على الجميع بنجاح! 💰⛈️");
+    }
+
     function buy(type, val) {
         if(type === 'color') { me.color = val; localStorage.setItem('c', val); }
         else { me.title = val; localStorage.setItem('t', val); }
-        alert("تم التفعيل فوراً يا ملك! الرصيد لا ينقص.");
+        alert("تم التفعيل يا ملك!");
     }
 
     function push() {
         let i = document.getElementById('msg-in'); if(!i.value) return;
-        // لا نحتاج لإضافة ذهب، الرصيد انفينيتي
-        db.ref('infinity_v44').push({ u: me.name, t: i.value, a: me.avatar, c: me.color, title: me.title, g: "∞" });
+        db.ref('rain_v45').push({ u: me.name, t: i.value, a: me.avatar, c: me.color, title: me.title, g: "∞" });
         i.value = "";
     }
 
-    db.ref('infinity_v44').limitToLast(30).on('child_added', s => {
+    db.ref('rain_v45').limitToLast(30).on('child_added', s => {
         let d = s.val();
         let ytID = d.t.match(/^.*(youtu.be\/|v\/|u\/\w\/|embed\/|watch\?v=|\&v=)([^#\&\?]*).*/);
         if(ytID) {
             document.getElementById('yt-win').style.display = 'block';
-            document.getElementById('yt-area').innerHTML = `<iframe width="100%" height="130" src="https://www.youtube.com/embed/${ytID[2]}" frameborder="0" allowfullscreen></iframe>`;
+            document.getElementById('yt-player').innerHTML = `<iframe width="100%" height="130" src="https://www.youtube.com/embed/${ytID[2]}" frameborder="0" allowfullscreen></iframe>`;
         }
-        let area = document.getElementById('chat-scroller');
+        let area = document.getElementById('chat-area');
         let div = document.createElement('div');
         div.className = "msg";
         div.innerHTML = `<img src="${d.a}" class="pfp">
             <div class="bubble">
                 <span style="font-size:9px; color:var(--gold)">[${d.title}]</span> <b style="color:${d.c}; font-size:11px;">${d.u}</b><br>
                 <span>${d.t}</span>
+                <span class="gold-tag">💰 رصيده: ${d.g}</span>
             </div>`;
         area.appendChild(div);
         area.scrollTop = area.scrollHeight;
     });
 
-    function updateAvatar(input) {
+    function updateP(input) {
         if(input.files[0]) {
             let r = new FileReader();
             r.onload = e => { me.avatar = e.target.result; document.getElementById('me-pfp').src = e.target.result; };
